# Swarmathon-UH-Public

misc/: rover_onboard_node_launch.sh
misc/logs/: empty.txt
src/behaviours/src/: DriveController.h  DropOffController.cpp  LogicController.cpp  LogicController.h  ManualWaypointController.cpp  ObstacleController.h  PickUpController.cpp  PickUpController.h  ROSAdapter.cpp  RangeController.h  SearchController.cpp  SearchController.h
src/rover_name/: CMakeLists.txt  package.xml
src/rover_name/src/: rover_name.cpp
