<?xml version="1.0"?>
<package>
  <name>rover_name</name>
  <version>0.1.0</version>
  <description>Generates a list of all swarmies running together</description>

  <maintainer email="pmobanion@uh.edu">Patrick OBanion</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
